third_party/move/move-compiler-v2/tests/reference-safety/multiple_use_invalid.exp

Diagnostics:
error: same mutable reference in local is also used in other local in same argument list
  ┌─ tests/reference-safety/multiple_use_invalid.move:5:9
  │
5 │         s(&mut s.x, &mut s.x)
  │         ^^^^^^^^^^^^^^^^^^^^^
  │         │ │         │
  │         │ │         previous mutable field borrow
  │         │ previous mutable field borrow
  │         requirement enforced here

error: same mutable reference in local `r` is also used in other local `x` in same argument list
   ┌─ tests/reference-safety/multiple_use_invalid.move:11:9
   │
 9 │         let r = &mut s.x;
   │                 -------- previous mutable field borrow
10 │         let x = r;
11 │         s(r, x)
   │         ^^^^^^^ requirement enforced here
